# brscan

./: CMakeLists.txt  README.md
cmake/: FindLibUSB.cmake  FindSane.cmake
data/: Brsane.ini
libbrcolm/: Makefile.in
libbrscandec/: Makefile  Makefile.in  brother_bugchk.c  brother_bugchk.h  brother_chreso.c  brother_chreso.h  brother_scandec.c  brother_scandec.h
libsane-brother/: brother.c  brother_bugchk.h  brother_log.c  brother_modelinf.c
